--- a/research/go_benmark/balance_speed_mu_lock_golang/Dockerfile
+++ b/research/go_benmark/balance_speed_mu_lock_golang/Dockerfile
@@ -1,8 +1,8 @@
 # Build stage
 # Build stage
 FROM golang:1.18-alpine3.15 AS builder
-WORKDIR /app
-ADD go.mod go.sum /app/
+WORKDIR /App
+ADD go.mod go.sum /App/
 RUN go mod download
 
 COPY . .
@@ -10,7 +10,7 @@ RUN go build -o main main.go
 
 # Run stage
 FROM alpine:3.15
-WORKDIR /app
-COPY --from=builder /app/main .
+WORKDIR /App
+COPY --from=builder /App/main .
 
-CMD [ "/app/main" ]
+CMD [ "/App/main" ]
