--- a/ .github / workflows/ci.yml
+++ b/ .github / workflows/ci.yml
@@ -2,9 +2,9 @@ name: BalanceService
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ master ]
 
 jobs:
 
