--- a/ .github / workflows/ci.yml
+++ b/ .github / workflows/ci.yml
@@ -1,4 +1,4 @@
-name: BalanceService
+name: Run CI
 
 on:
   push:
@@ -8,19 +8,20 @@ on:
 
 jobs:
 
-  build:
-    name: CI_TEST
+  test:
+    name: Test-CI
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
 
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
         with:
-          go-version: 1.18
+          go-version: ^1.18
+        id: go
 
-      - name: Build
-        run: go build -v ./...
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
 
       - name: Test
         run: make test
