--- a/ .github / workflows/ci.yml
+++ b/ .github / workflows/ci.yml
@@ -1,27 +1,25 @@
-name: Run CI
+name: Go
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ master ]
+    branches: [ "master" ]
 
 jobs:
 
-  test:
-    name: Test-CI
+  build:
     runs-on: ubuntu-latest
-
     steps:
+      - uses: actions/checkout@v3
 
-      - name: Set up Go 1.x
-        uses: actions/setup-go@v2
+      - name: Set up Go
+        uses: actions/setup-go@v3
         with:
-          go-version: ^1.18
-        id: go
+          go-version: 1.18
 
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
+      - name: Build
+        run: go build -v ./...
 
       - name: Test
-        run: make test
+        run: go test -v ./...
