--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Go
+name: TestCI
 
 on:
   push:
@@ -17,6 +17,12 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.18
+
+      - name: Create DI-file with Wire
+        run: |
+          go install github.com/google/wire/cmd/wire@latest
+          cd ../../balance
+          sudo wire
 
       - name: Build
         run: go build -v ./...
