--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,9 @@ jobs:
           wire
 
       - name: Build
-        run: go build -v ./...
+        run:
+          ls
+          go build -v ./...
 
       - name: Test
         run: go test -v ./...
