--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,9 @@ jobs:
     name: Build image
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/setup-go@v3
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
