add checkout code

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,8 @@ jobs:
     name: Build image
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
