--- a/.github/workflows/test_build_images.yml
+++ b/.github/workflows/test_build_images.yml
@@ -7,7 +7,7 @@ on:
 jobs:
 
   build:
-    name: Build image
+    name: Test build images
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
