--- a/.github/workflows/test_build_images.yml
+++ b/.github/workflows/test_build_images.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/checkout@v3
       - name: Test build images success before merge
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .l
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
