add name forward port

--- a/eks/service.yaml
+++ b/eks/service.yaml
@@ -6,7 +6,8 @@ spec:
   selector:
     app:  payment-gateway-balance-calculator-service
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 8080
   type: LoadBalancer
