--- a/eks/service.yaml
+++ b/eks/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: payment-balance-calculator-api-service
+  name: payment-gateway-balance-calculator-service
 spec:
   selector:
     app:  payment-gateway-balance-calculator-service
@@ -10,4 +10,4 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 8080
-  type: LoadBalancer
+  type: ClusterIP
