--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,8 @@ jobs:
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./devops/Dockerfile .
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest -f ./devops/Dockerfile .
-          docker push -a $ECR_REGISTRY/$ECR_REPOSITORY
+          docker push  $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker push  $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
       - name: Update kube config
         run: aws eks update-kubeconfig --name payment-balance --region ap-southeast-1
