--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t $REGISTRY/$REPOSITORY:latest -f ./devops/Dockerfile .
-          docker push $REGISTRY/$REPOSITORY
+          docker push -a $REGISTRY/$REPOSITORY
 
       - name: Update kube config
         run: aws eks update-kubeconfig --name payment-balance --region ap-southeast-1
