--- a/devops/.env.example
+++ b/devops/.env.example
@@ -5,7 +5,7 @@ AWS_VERSION_STATE_GLOBAL_KEY=AWSCURRENT
 
 LINK_FILE_LOG=./balance/infrastructure/log/log_file/log.log
 LINK_FOLDER_LOG=./balance/infrastructure/log/log_file
-LINK_ENV_LOCAL=balance/infrastructure/config/env/.env
+LINK_ENV_LOCAL=./balance/infrastructure/config/env/.env
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
