--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -12,6 +12,7 @@ RUN go build -o main main.go
 FROM alpine:3.15
 WORKDIR /app
 COPY --from=builder /app/main .
+COPY --from=builder /app/balance/infrastructure/   ./balance/infrastructure/
 
 EXPOSE 8080
 CMD [ "./main" ]
